--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userProfile.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userProfile.html
@@ -13,11 +13,7 @@
     
     <div class="panel panel-default">
       <div class="panel-body">
-        {% if user.profile.profilePicture %}
-          <img class="img-responsive" src="{{ user.profile.profilePicture.url }}" alt="Profile Picture"></img>
-        {% else %}
-          <img class="img-responsive" src="{% url 'aristotle_mdr:dynamic_profile_picture' user.id %}" alt="Profile Picture"></img>
-        {% endif %}
+          <img class="img-responsive" src="{{ user.profile.get_profile_picture_url }}" alt="Profile Picture"></img>
       </div>
     </div>
 
