workgroup listing efficiency

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
@@ -60,8 +60,8 @@ Showing {{ page.paginator.count }} results.
             <a href="{{ item.get_absolute_url }}">{{ item.name }}</a>
         </td>
         <td>{{ item.definition|striptags|safe|truncatewords:50 }}</td>
-        <td>{{ item.members.count }}</td>
-        <td>{{ item.items.count }}</td>
+        <td>{{ item|distinct_members_count }}</td>
+        <td>{{ item.items__count }}</td>
         {% if show_all %}
         <td>
             {% if item.archived %}
