--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/users/list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/user_management/templates/aristotle_mdr/users_management/users/list.html
@@ -8,7 +8,15 @@
 {% endblock %}
 
 {% block page %}
-    <h1>Current members of this Registry</h1>
+<h1>Current members of this Registry</h1>
+
+<div>
+{% if page_obj.has_other_pages %}
+Showing {{ page_obj.start_index }} - {{ page_obj.end_index }} of {{ paginator.count }} results.
+{% else %}
+Showing {{ paginator.count }} results.
+{% endif %}
+</div>
 
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -32,6 +40,7 @@
     </div>
   </div>
 </div>
+
 
 <table class="table">
   <thead>
