Add workgroup count prop

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userSideBar.html
@@ -52,7 +52,7 @@
     <li {% ifequal activeTab "workgroups" %}class="active"{% endifequal %}>
         <a href="{% url 'aristotle:userWorkgroups' %}">
         <i class="fa fa-users fa-fw"></i> {% trans "Workgroups" %}
-        <span class="badge pull-right">{{ user.profile.myWorkgroups.count }}</span></a>
+        <span class="badge pull-right">{{ user.profile.myWorkgroupCount }}</span></a>
         {% ifequal activeTab "workgroupArchives" %}
         <ul class="nav nav-pills nav-stacked nav-collapse dashSubMenu">
             <li class="active">
