--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/paginated_workgroup_list.html
@@ -43,7 +43,7 @@ Showing {{ page.paginator.count }} results.
         {% elif sort == "items_desc" %}
         <a href="?{% paginator_get request page.number pop='sort' %}&sort=items_asc"><i class="fa fa-sort-desc"></i></a>
         {% else %}
-        <a href="?{% paginator_get request page.number pop='sort' %}&sort=items_desc"><i class="fa fa-sort"></i></a>
+        <a href="?{% paginator_get request page.number pop='sort' %}&sort=items_asc"><i class="fa fa-sort"></i></a>
         {% endif %}
             <i class="fa fa-file" title="{% trans 'Number of items' %}"></i>
         </th>
