--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userWorkgroups.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userWorkgroups.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block sidebar %}
-    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='workgroups' subWorkgroups=user.profile.myWorkgroups.all %}
+    {% include "aristotle_mdr/user/userSideBar.html" with activeTab='workgroups' %}
 {% endblock %}
 
 {% block page %}
