Fix data element ordering

--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/actions/edit_inclusion_order.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/actions/edit_inclusion_order.html
@@ -39,7 +39,7 @@
         {% endfor %}
       </tr></thead>
     {% endwith %}
-    <tbody id="draggableTable">
+    <tbody class="draggableTable">
     {% for form in formset.forms %}
       <tr class="moveablerow">
           <td title="Drag to reorder"><i class="fa fa-bars grabber"></i>
