--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -11,10 +11,29 @@
 
 {% block page %}
 <h1><i class="fa fa-pencil-square-o fa-fw"></i> {% block title %}{% trans "My Sandbox" %}{% endblock %}</h1>
+<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#share-link-modal"><i class="fa fa-share-square-o fa-fw"></i>Create Share Link</button>
 <p>
     Below are all items you have created that have not been registered, requested for review or assigned to a workgroup.
     Only you can see these items.
 </p>
+
+<div id="share-link-modal" class="modal fade" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        <p>Test modal</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% include "aristotle_mdr/helpers/bulk_action_paginated_list.html" with allow_select_all=True page=page_obj delete=True %}
 
