--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -2,7 +2,6 @@
 {% load i18n static %}
 
 {% block individual_scripts %}
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
 <script src="{% static 'aristotle_mdr/sandbox.js' %}"></script>
 <script>
     delete_submit_url="{% url 'aristotle_mdr:sandbox_delete' %}";
@@ -17,7 +16,7 @@
     Only you can see these items.
 </p>
 
-<div id="share-link-modal" class="modal fade" tabindex="-1" role="dialog">
+<div id="share-link-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -30,6 +29,24 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="delete-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Delete</h4>
+      </div>
+      <div class="modal-body">
+        <p id="modal-message">...</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button id="delete-confirm-button" type="button" class="btn btn-primary">Ok</button>
       </div>
     </div>
   </div>
