--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -10,7 +10,7 @@
 
 {% block page %}
 <h1><i class="fa fa-pencil-square-o fa-fw"></i> {% block title %}{% trans "My Sandbox" %}{% endblock %}</h1>
-<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#share-link-modal"><i class="fa fa-share-square-o fa-fw"></i>Create Share Link</button>
+<button class="btn btn-primary pull-right" data-toggle="modal" data-target="#share-link-modal"><i class="fa fa-share-square-o fa-fw"></i>{% if not share %}Create {% endif %}Share Link</button>
 <p>
     Below are all items you have created that have not been registered, requested for review or assigned to a workgroup.
     Only you can see these items.
@@ -21,14 +21,24 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modal title</h4>
+        <h4 class="modal-title">Share Link</h4>
       </div>
       <div class="modal-body">
-        <p>Test modal</p>
+        {% if share %}
+          <p>Share: {{ share }}</p>
+        {% endif %}
+        <label>Emails</label>
+        <div id="email-fields">
+          <div class="form-group email-group">
+            <input class="emails"></input>
+            <button class="btn btn-danger remove-email"><i class="fa fa-times fa-fw"></i></button>
+          </div>
+        </div>
+        <button id="add-email" class="btn btn-primary">Add</button>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">{% if share %}Update{% else %}Create{% endif %}</button>
       </div>
     </div>
   </div>
