--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/autocomplete/templates/aristotle_mdr/actions/autocompleteUser.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/autocomplete/templates/aristotle_mdr/actions/autocompleteUser.html
@@ -1,7 +1,7 @@
 {% load i18n l10n %}
 {% load static %}
 
-<span class="autocomplete-item block" data-value="{{ result.pk|unlocalize }}">
+<span class="autocomplete-item block" data-html="true" data-value="{{ result.pk|unlocalize }}">
 {% if result.get_full_name %}
     {{ result.highlight.full_name|safe }}
     {% if result == request.user %}
