Field display and value handling

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
@@ -8,6 +8,6 @@
     </div>
     {% endfor %}
   </div>
-  <button class="add-field" class="btn btn-primary">Add</button>
+  <button type="button" class="add-field" class="btn btn-primary">Add</button>
 </div>
 {% endspaceless %}
