--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -11,6 +11,13 @@
 {% block page %}
 <h1><i class="fa fa-pencil-square-o fa-fw"></i> {% block title %}{% trans "My Sandbox" %}{% endblock %}</h1>
 <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#share-link-modal"><i class="fa fa-share-square-o fa-fw"></i>{% if not share %}Create {% endif %}Share Link</button>
+
+{% if display_share and share %}
+<div class="alert alert-info" role="alert">
+  Your share link is
+</div>
+{% endif %}
+
 <p>
     Below are all items you have created that have not been registered, requested for review or assigned to a workgroup.
     Only you can see these items.
@@ -23,26 +30,19 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Share Link</h4>
       </div>
-      <div class="modal-body">
-        {% if share %}
-          <p>Share: {{ share }}</p>
-        {% endif %}
-        {% comment %}
-        <label>Emails</label>
-        <div id="email-fields">
-          <div class="form-group email-group">
-            <input class="emails"></input>
-            <button class="btn btn-danger remove-email"><i class="fa fa-times fa-fw"></i></button>
-          </div>
+      <form method="POST">
+        <div class="modal-body">
+          {% if share %}
+            <p>Share: {{ share }}</p>
+          {% endif %}
+          {% csrf_token %}
+          {{ form.as_table }}
         </div>
-        <button id="add-email" class="btn btn-primary">Add</button>
-        {% endcomment %}
-        {{ form.as_table }}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">{% if share %}Update{% else %}Create{% endif %}</button>
-      </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">{% if share %}Update{% else %}Create{% endif %}</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
