--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -14,7 +14,7 @@
 
 {% if display_share and share %}
 <div class="alert alert-info" role="alert">
-  Your share link is
+  Your share link is {{ share.uuid }}
 </div>
 {% endif %}
 
@@ -33,7 +33,7 @@
       <form method="POST">
         <div class="modal-body">
           {% if share %}
-            <p>Share: {{ share }}</p>
+            <p>Share: {{ share.uuid }}</p>
           {% endif %}
           {% csrf_token %}
           {{ form.as_table }}
