--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
@@ -1,9 +1,9 @@
 {% spaceless %}
 <div class='multi-widget'>
   <div class='multi-fields'>
-    {% for widget in widget.subwidgets %}
+    {% for subwidget in widget.subwidgets %}
     <div class='form-group'>
-      {% include widget.template_name %}
+      {% include subwidget.template_name with widget=subwidget %}
       <button class="btn btn-danger remove-field"><i class="fa fa-times fa-fw"></i></button>
     </div>
     {% endfor %}
