Made list in shared sandbox, link to shared item page

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/itemLink.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/itemLink.html
@@ -1,7 +1,11 @@
 {% load aristotle_tags %}
 
 {% if item %}
-    <a class="itemLink" href="{{ item.get_absolute_url }}">
+    {% if shared_items and share_uuid %}
+      <a class="itemLink" href="{% url 'aristotle_mdr:sharedSandboxItem' share_uuid item.id %}">
+    {% else %}
+      <a class="itemLink" href="{{ item.get_absolute_url }}">
+    {% endif %}
     {% if space %}
         {% zws item.name %}
     {% else %}
