--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -23,7 +23,7 @@
     Only you can see these items.
 </p>
 
-<div id="share-link-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog" {% if form.errors %}data-show="true"{% endif %}>
+<div id="share-link-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -46,6 +46,12 @@
     </div>
   </div>
 </div>
+
+{% if form.errors %}
+<script>
+  $('#share-link-modal').modal('show')
+</script>
+{% endif %}
 
 <div id="delete-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
