--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/widgets/multi_input.html
@@ -8,12 +8,12 @@
           {% include subwidget.template_name with widget=subwidget %}
         </div>
         <div class="col-md-1">
-          <button class="btn btn-danger remove-field"><i class="fa fa-times fa-fw"></i></button>
+          <button class="btn btn-danger remove-field widget-button"><i class="fa fa-times fa-fw"></i></button>
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
-  <button type="button" class="btn btn-primary add-field">Add</button>
+  <button type="button" class="btn btn-primary add-field widget-button">Add</button>
 </div>
 {% endspaceless %}
