Proper link display on shared item pages

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/itemLink.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/itemLink.html
@@ -3,6 +3,8 @@
 {% if item %}
     {% if shared_items and share_uuid %}
       <a class="itemLink" href="{% url 'aristotle_mdr:sharedSandboxItem' share_uuid item.id %}">
+    {% elif item.id in shared_ids and share_uuid %}
+      <a class="itemLink" href="{% url 'aristotle_mdr:sharedSandboxItem' share_uuid item.id %}">
     {% else %}
       <a class="itemLink" href="{{ item.get_absolute_url }}">
     {% endif %}
