put skips on h4

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -32,12 +32,12 @@
 </p>
 
 {# Skipping wcag on these modals due to how headers are rendered in modals #}
-<div id="share-link-modal" class="modal fade exclude-scrap aristotle-skip-wcag" tabindex="-1" role="dialog">
+<div id="share-link-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Share Link</h4>
+        <h4 class="modal-title aristotle-skip-wcag">Share Link</h4>
       </div>
       <form method="POST">
         <div class="modal-body">
@@ -70,12 +70,12 @@
 </script>
 {% endif %}
 
-<div id="delete-modal" class="modal fade exclude-scrap aristotle-skip-wcag" tabindex="-1" role="dialog">
+<div id="delete-modal" class="modal fade exclude-scrap" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Delete</h4>
+        <h4 class="modal-title aristotle-skip-wcag">Delete</h4>
       </div>
       <div class="modal-body">
         <p id="modal-message">...</p>
