--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/advanced_editor.html
@@ -6,7 +6,7 @@
 {% block extra_head_scripts %}
     <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.wizard.less'|compile %}" />
     <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle_search.less'|compile %}" />
-    <script src="{% static 'aristotle_mdr/jqueryui/jquery-ui.min.js' %}"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.moveable.less'|compile %}" />
     {% if request.is_ajax %}
         <script type="text/javascript">
