--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_2_results.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_2_results.html
@@ -3,7 +3,7 @@
 
 {% block extra_head_scripts %}
 {{ block.super }}
-<script src="{% static 'aristotle_mdr/jqueryui/jquery-ui.min.js' %}"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <link rel="stylesheet" href="{% static 'aristotle_mdr/aristotle.moveable.less'|compile %}" />
 <script src="{% static 'aristotle_mdr/aristotle.moveable.js' %}"></script>
 {% endblock %}
