--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/scripts.html
@@ -9,10 +9,10 @@
 {{ form.media }}
 {{ formset.media }}
 
-<link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap/css/bootstrap.min.css' %}" />
-<script src="{% static 'aristotle_mdr/bootstrap/js/bootstrap.min.js' %}" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
 
-<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.less'|compile %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/aristotle.visuals.less'|compile %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'aristotle_mdr/bootstrap.wcag.css' %}" />
