--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr/links/links_editor_tab.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/links/templates/aristotle_mdr/links/links_editor_tab.html
@@ -7,7 +7,8 @@
     {% endblock %}
 
 
-<a class="sr-only" onclick="addSlot()" href="?extra=1" accesskey='r'>Add a slot (adding a slot does not save changes)</a>
+
+<a class="sr-only" onclick="addSlot()" href="?extra=1" accesskey='r'></a>
     {% with formset=slots_FormSet %}
 
     {{ formset.management_form }}
