--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/sandbox.html
@@ -37,7 +37,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title aristotle-skip-wcag">Share Link</h4>
+        <div class="modal-title h4">Share Link</div>
       </div>
       <form method="POST">
         <div class="modal-body">
@@ -75,7 +75,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title aristotle-skip-wcag">Delete</h4>
+        <div class="modal-title h4">Delete</div>
       </div>
       <div class="modal-body">
         <p id="modal-message">...</p>
