--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/infobox.html
@@ -44,10 +44,10 @@
             {% endcomment %}
 
             {% if item.registerable %}
-            {% include "aristotle_mdr/infobox_statuses.html" with statuses=item.current_statuses %}
+            {% include "aristotle_mdr/infobox_statuses.html" with statuses=statuses %}
             {% endif %}
 
-            {% if item.publicationrecord and not item.current_statuses %}
+            {% if item.publicationrecord and not statuses %}
                 {% include "aristotle_self_publish/concepts/publication_details.html" with item=item %}
             {% endif %}
 
