Prefetch for cluster inclusion statuses

--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/concepts/dataSetSpecification.html
@@ -84,7 +84,7 @@
                         {% endif %}
                     </td>
                     <td><ul>
-                        {% for s in item.current_statuses %}
+                        {% for s in deinc.child.current_stats %}
                             <li>[{{ s.registrationAuthority }}: {{ s.state_name }}]</li>
                         {% empty %}
                         <li><em>Unregistered</em></li>
