--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/visibilityInfoBar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/visibilityInfoBar.html
@@ -3,8 +3,9 @@
 <div class="col-sm-8 col-xs-12">
 {% if item.is_superseded  %}
     <div id="progress" class=" alert alert-info">
-        {% trans 'This item has been superseded by the newer version'%} - 
-        <em>{% include "aristotle_mdr/helpers/itemLink.html" with item=item.superseded_by %}</em>.
+        {% blocktrans %}
+        This item has been superseded by a newer version by one or more Registration Authorities.
+        {% endblocktrans %}
     </div>
 {% elif item.is_retired %}
     <div id="progress" class=" alert alert-warning">
